--- a/src/components/Tabs/TabPC.module.scss
+++ b/src/components/Tabs/TabPC.module.scss
@@ -33,10 +33,10 @@
   }
 }
 
-
 .tab-swiper {
   width: 100%;
   &__box {
+    position: relative;
     max-width: 800px;
     margin: 0 auto;
   }
@@ -47,39 +47,14 @@
     justify-content: center;
     align-items: center;
   }
-}
-
-
-
-.tab-swiper__navigation {
-  display: flex;
-  justify-content: space-between;
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  transform: translateY(-50%);
-  z-index: 1;
-  pointer-events: none;
-
-  .swiper-button-next,
-  .swiper-button-prev {
-    position: static;
-    transform: none;
-    margin: 0 10px;
-    background: rgba(0, 0, 0, 0.5);
-    color: white;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
+  &__navigation {
+    max-width: 206px;
+    width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    pointer-events: auto;
-  }
-
-  .swiper-button-next::after,
-  .swiper-button-prev::after {
-    font-size: 1.5rem;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 1.5%;
+    left: 37%;
+    z-index: 1;
   }
 }
