--- a/src/index.scss
+++ b/src/index.scss
@@ -34,5 +34,12 @@ body {
   border-image: initial;
 }
 
+.container {
+  max-width: 1200px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: 0 auto;
+}
+
 
 
